added photography page

--- a/photography.html
+++ b/photography.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Justin Zhao</title>
+    <title>Photography - Justin Zhao</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
@@ -19,8 +19,8 @@
             <div class="uk-navbar-center">
         
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href="#">About</a></li>
-                    <li><a href="photography.html">Photography</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li class="uk-active"><a href="#">Photography</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Misc.</a></li>
                 </ul>
@@ -31,31 +31,17 @@
         <!-- Bio -->
         <div class="uk-flex-middle uk-margin-large-top" uk-grid>
             <div class="uk-width-1-2@m">
-                <h1>Justin Zhao</h1>
+                <h1>my photos</h1>
+                <p>Here are some of my favorite pictures that I've taken.</p>
+                <p>The rest of them live on my photography instagram page.</p>
                 <ul class="uk-list">
-                    <li><span uk-icon="bolt"></span> NYU Stern c/o 2024</li>
-                    <li><span uk-icon="home"></span> SoCal</li>
+                    <li><span uk-icon="instagram"></span> <a href="https://www.instagram.com/zaho.jpeg/">@zaho.jpeg</a></li>
                 </ul>
-                <p>Welcome to my personal website.</p>
             </div>
             <div class="uk-width-1-2@m uk-flex-first">
                 <img class="uk-box-shadow-large" src="http://placekitten.com/g/600/500" alt="Image">
             </div>
         </div>
-
-        <!-- About -->
-        <div class="uk-flex-middle uk-margin-large-top" uk-grid>
-            <div class="uk-width-1-2@m uk-flex-first">
-                <h1>about me</h1>
-                <p>I am a business and computer science major at NYU. Although I'm now based in NYC, I call southern california my home.</p>
-                <p>I love taking photos while discovering fun, new things to do and eat. Check out my photos <a>here</a>.</p>
-            </div>
-            <div class="uk-width-1-2@m uk-visible@m">
-                <img class="uk-box-shadow-large" src="http://placekitten.com/g/600/500" alt="Image">
-            </div>
-        </div>
-
-<!-- 500  x  364-->
 
         <!-- Socials -->
         <div class="uk-container uk-width-1-2">
@@ -72,6 +58,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
