--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <script src="dist/js/uikit.min.js"></script>
     <script src="dist/js/uikit-icons.min.js"></script>
     
+    <script src="dist/js/swupSlideTheme.min.js"></script>
     <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
 </head>
 
 <body>
+
+    <main id="swup" class="transition-fade">
+
     <!-- Main Body -->
     <div class="uk-container uk-margin-large-bottom uk-container-small">
 
@@ -30,8 +34,6 @@
         
             </div>
         </nav>
-
-        <main id="swup" class="transition-fade">
 
         <!-- Bio -->
         <div class="uk-flex-middle uk-margin-large-top" uk-grid>
