--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
 
         <!-- Bio -->
-        <div class="uk-flex-middle uk-margin-large-top" uk-grid>
+        <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
             <div class="uk-width-1-2@m">
                 <h1>Justin Zhao</h1>
                 <ul class="uk-list">
@@ -51,7 +51,7 @@
         </div>
 
         <!-- About -->
-        <div class="uk-flex-middle uk-margin-large-top" uk-grid>
+        <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
             <div class="uk-width-1-2@m uk-flex-first">
                 <h1>about me</h1>
                 <p>I am a business and computer science major at NYU. Although I'm now based in NYC, I call southern california my home.</p>
@@ -63,10 +63,10 @@
         </div>
 
         <!-- Socials -->
-        <div class="uk-container uk-width-1-2">
-            <div class="uk-flex-middle uk-margin-large-top" uk-grid>
+        <div class="uk-container uk-width-1-2 uk-margin-xlarge-top">
+            <div class="uk-flex-middle" uk-grid>
                 <div class="uk-width-1-2@m">
-                    <img class="uk-box-shadow-large" src="src/images/about-page/pikachu-greeting.gif" alt="Image">
+                    <h1>find me</h1>
                 </div>
                 <div class="uk-width-1-2@m">
                     <ul class="uk-list">
