added two pages

--- a/photography.html
+++ b/photography.html
@@ -28,8 +28,8 @@
                 <ul class="uk-navbar-nav">
                     <li><a href="/index.html">About</a></li>
                     <li class="uk-active"><a href="#">Photography</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Misc.</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="/misc.html">Misc.</a></li>
                 </ul>
         
             </div>
@@ -39,9 +39,9 @@
         <!-- Bio -->
         <div class="uk-flex-middle uk-margin-large-top" uk-grid>
             <div class="uk-width-1-2@m">
-                <h1>my photos</h1>
-                <p>Here are my favorite pictures that I've taken.</p>
-                <p>The rest of them live on my photography instagram page.</p>
+                <h1>photos</h1>
+                <p>Some of my favorite shots.</p>
+                <p>They also live on my photography instagram page.</p>
                 <ul class="uk-list">
                     <li><span uk-icon="instagram"></span> <a href="https://www.instagram.com/zaho.jpeg/">@zaho.jpeg</a></li>
                 </ul>
@@ -52,10 +52,10 @@
         </div>
 
         <!-- Socials -->
-        <div class="uk-container uk-width-1-2">
-            <div class="uk-flex-middle uk-margin-large-top" uk-grid>
+        <div class="uk-container uk-width-1-2 uk-margin-xlarge-top">
+            <div class="uk-flex-middle" uk-grid>
                 <div class="uk-width-1-2@m">
-                    <img class="uk-box-shadow-large" src="src/images/about-page/pikachu-greeting.gif" alt="Image">
+                    <h1>find me</h1>
                 </div>
                 <div class="uk-width-1-2@m">
                     <ul class="uk-list">
