--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Justin Zhao</title>
+    <title>Projects - Justin Zhao</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
@@ -26,19 +26,19 @@
             <div class="uk-navbar-center">
         
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href="#">About</a></li>
+                    <li><a href="/index.html">About</a></li>
                     <li><a href="/photography.html">Photography</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
+                    <li class="uk-active"><a href="#">Projects</a></li>
                     <li><a href="/misc.html">Misc.</a></li>
                 </ul>
         
             </div>
         </nav>
 
-        <!-- Bio -->
+        <!-- Description -->
         <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
             <div class="uk-width-1-2@m">
-                <h1>justin zhao</h1>
+                <h1>projects</h1>
                 <ul class="uk-list">
                     <li><span uk-icon="bolt"></span> NYU Stern c/o 2024</li>
                     <li><span uk-icon="home"></span> Orange County, CA</li>
@@ -46,18 +46,6 @@
                 <p>Welcome to my personal website.</p>
             </div>
             <div class="uk-width-1-2@m uk-flex-first">
-                <img class="uk-box-shadow-large" src="http://placekitten.com/g/600/500" alt="Image">
-            </div>
-        </div>
-
-        <!-- About -->
-        <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
-            <div class="uk-width-1-2@m uk-flex-first">
-                <h1>about me</h1>
-                <p>I am a business and computer science major at NYU. Although I'm now based in NYC, I call southern california my home.</p>
-                <p>I love taking photos while discovering fun, new things to do and eat. Check out my photos <a>here</a>.</p>
-            </div>
-            <div class="uk-width-1-2@m uk-visible@m">
                 <img class="uk-box-shadow-large" src="http://placekitten.com/g/600/500" alt="Image">
             </div>
         </div>
