added image src

--- a/photography.html
+++ b/photography.html
@@ -51,6 +51,11 @@
             </div>
         </div>
 
+        <!-- Images -->
+        <div uk-grid>
+            
+        </div>
+
         <!-- Socials -->
         <div class="uk-container uk-width-1-2 uk-margin-xlarge-top">
             <div class="uk-flex-middle" uk-grid>
