--- a/misc.html
+++ b/misc.html
@@ -28,7 +28,7 @@
                 <ul class="uk-navbar-nav">
                     <li><a href="/index.html">About</a></li>
                     <li><a href="/photography.html">Photography</a></li>
-                    <li><a href="/misc.html">Projects</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
                     <li class="uk-active"><a href="#">Misc.</a></li>
                 </ul>
         
@@ -38,12 +38,8 @@
         <!-- Description -->
         <div class="uk-flex-middle uk-margin-xlarge-top" uk-grid>
             <div class="uk-width-1-2@m">
-                <h1>projects</h1>
-                <ul class="uk-list">
-                    <li><span uk-icon="bolt"></span> NYU Stern c/o 2024</li>
-                    <li><span uk-icon="home"></span> Orange County, CA</li>
-                </ul>
-                <p>Welcome to my personal website.</p>
+                <h1>miscellaneous</h1>
+                <p>thought dump.</p>
             </div>
             <div class="uk-width-1-2@m uk-flex-first">
                 <img class="uk-box-shadow-large" src="http://placekitten.com/g/600/500" alt="Image">
