--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p></p>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <img class="uk-box-shadow-large" src="http://placekitten.com/g/600/500" alt="Image">
+                    <img class="uk-box-shadow-large" src="/src/images/about-page/me-skewer.jpg" alt="Image">
                 </div>
             </div>
 
@@ -57,11 +57,11 @@
                     <p>I am a business and computer science major at NYU. Although I'm now based in NYC, I call southern
                         california my home.</p>
                     <p>I love taking photos while discovering fun, new things to do and eat. Check out my photos
-                        <a>here</a>.
+                        <a href="/photography.html">here</a>.
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
-                    <img class="uk-box-shadow-large" src="/src/images/about-page/me-skewer.jpg" alt="Image">
+                    <img class="uk-box-shadow-large" src="/src/images/about-page/me-hawaii.jpeg" alt="Image">
                 </div>
             </div>
 
