--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
-                    <img class="uk-box-shadow-large" src="/src/images/about-page/me-hawaii.jpeg" alt="Image">
+                    <img class="uk-box-shadow-large" src="./src/images/about-page/me-hawaii.jpeg" alt="Image">
                 </div>
             </div>
 
